--- a/museum.html
+++ b/museum.html
@@ -2,13 +2,58 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maxium-scale=1.0,shrink-to-fit=no">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="theme-color" content="#000000">
+
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="For Men's Fashion Marketplace">
+  <meta name="keywords" content="HTML,CSS,XML,JavaScript">
+  <meta http-http-equiv="refresh" content="30">
+  <meta name="author" content="WeiDi Huang">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
   <title>Document</title>
 </head>
 <body>
+
   <h1>Hello World!</h>
   <h2>This is my Men's Fashion Marketplace project named "Museum".</h2>
   <h3>Still Working on it!</h3>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+
+
+  <div class="theme-width">
+    <!-- sidebar navigation -->
+    <div class="sidebar-navigation"></div>
+    <div class="sidebar-overlay close-btn"></div>
+
+    <!-- Header -->
+    <header>
+      <div class="sticky-header visible-lg visible md"></div>
+      <!-- sticky header -->
+      <div class="mobile-header visible sm visible-xs">
+        <div class="navicon">
+          <a href="#">
+            <i class="fa fa-navicon">
+              ::before
+            </i>
+          </a>
+        </div>
+        <!-- navicon -->
+        <div class="history-black hide-on-desktop"></div>
+        <div class="brand-logo"></div>
+        <div class="lang_flags"></div>
+        <div class="log_member"></div>
+        <div class="sericon"></div>
+
+      </div>
+      <!-- mobile header -->
+
+    </header>
+  </div>
 </body>
 </html>
